# coc-secret-keeper

./: .gitignore  CLAUDE.md  README.md  app.py  config.yaml  pyproject.toml
agents/: brainstorm.py  conflict_architect.py  design_team.py  json_utils.py  narrative_reviewer.py  outliner.py  prompt_loader.py  researcher.py  reviewer.py  worldbuilder.py  writer.py
docs/plans/: 2026-03-06-coc-story-generator-design.md  2026-03-07-coc-story-generator-implementation.md  2026-03-09-pdf-export-implementation.md  2026-03-10-design-team-design.md  2026-03-10-design-team-impl.md  2026-03-11-conflict-architect-redesign.md  chapter-transition-improvement.md
export/: __init__.py  pdf_exporter.py
llm/: config.py  logging.py  provider.py
models/: schemas.py  story_context.py
prompts/: brainstorm.md  conflict_architect.md  narrative_reviewer.md  outliner.md  researcher.md  reviewer.md  worldbuilder.md  writer.md
tests/: test_brainstorm.py  test_conflict_architect.py  test_design_team.py  test_integration.py  test_llm_config.py  test_narrative_reviewer.py  test_outliner.py  test_pdf_exporter.py  test_prompt_loader.py  test_researcher.py  test_reviewer.py  test_save_load.py  test_schemas.py  test_worldbuilder.py  test_writer.py
ui/: crew_progress.py
