[project]
name = "coc-story-generator"
version = "0.1.0"
description = "Multi-agent Cthulhu-themed novel generation tool"
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[anthropic]>=1.10.0",
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
